fix REPL overflow issue for large output and runes

--- a/src/styles/_mobileworkspace.scss
+++ b/src/styles/_mobileworkspace.scss
@@ -8,6 +8,7 @@ $shadow-light: rgba(0, 0, 0, 0.2);
   background-color: $cadet-color-2;
   white-space: pre-wrap;
   overflow: scroll;
+  overflow-x: scroll;
 
   .sa-substituter {
     .#{$ns}-slider-label {
@@ -44,6 +45,15 @@ $shadow-light: rgba(0, 0, 0, 0.2);
       }
     }
   }
+
+  .sa-list-visualizer {
+    .kineticjs-content {
+      canvas {
+        // to be changed later
+        width: 100% !important;
+      }
+    }
+  }
 }
 
 .mobile-unselected-panel {
@@ -72,10 +82,10 @@ $shadow-light: rgba(0, 0, 0, 0.2);
 
 .mobile-draggable {
   width: 100%;
-  min-height: 1000px;
+  height: 570px;
   z-index: 2;
   position: fixed;
-  bottom: -930px;
+  bottom: -500px;
   background-color: $cadet-color-3;
   border-radius: 5px;
   box-shadow: 0 0px 8px $shadow-dark, 0 0 16px $shadow-light;
@@ -111,5 +121,36 @@ $shadow-light: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100%;
     padding: 10px;
+    overflow: scroll;
+
+    // showing top shadow only when scroll down
+    background: linear-gradient($cadet-color-3 30%, rgba(255, 255, 255, 0)),
+      // cover up initial shadow
+      radial-gradient(
+          farthest-side at 50% 0,
+          rgba(0, 0, 0, 1),
+          rgba(0, 0, 0, 0.7) 60%,
+          rgba(0, 0, 0, 0)
+        );
+    background-repeat: no-repeat;
+    background-color: $cadet-color-3;
+    background-size: 100% 40px, 100% 20px;
+    background-attachment: local, scroll;
+
+    .#{$ns}-card {
+      opacity: 0.9; // for background shadow to pass through
+    }
+
+    .block-box {
+      // empty box to push the content up from the bottom navBar
+      height: 100px;
+      background-color: transparent;
+    }
+
+    canvas {
+      // only rune shown in repl so this override will not affect others
+      width: 100% !important;
+      height: 100% !important;
+    }
   }
 }
